added collision of circle

--- a/testPro/testPro.vcxproj
+++ b/testPro/testPro.vcxproj
@@ -127,12 +127,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CircleObstacle.cpp" />
+    <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Obstacle.cpp" />
+    <ClCompile Include="Obstacle.h" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerMovementHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CircleObstacle.h" />
+    <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="Directions.h" />
+    <ClInclude Include="ObstacleTypes.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerMovementHandler.h" />
   </ItemGroup>
