--- a/testPro/testPro.vcxproj.filters
+++ b/testPro/testPro.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Obstacle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StaticRectangleObstacle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ObstacleTypes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StaticRectangleObstacle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
