--- a/testPro/testPro.vcxproj
+++ b/testPro/testPro.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{d62d6438-b4de-489e-93f3-96429573d447}</ProjectGuid>
     <RootNamespace>testPro</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Block Crasher</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
