--- a/testPro/testPro.vcxproj
+++ b/testPro/testPro.vcxproj
@@ -132,9 +132,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CircleObstacle.cpp" />
+    <ClCompile Include="CoinItem.cpp" />
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="DynamicShapeObstacle.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="LevelHandler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Obstacle.cpp" />
@@ -147,11 +149,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CircleObstacle.h" />
+    <ClInclude Include="CoinItem.h" />
     <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Directions.h" />
     <ClInclude Include="DynamicShapeObstacle.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Item.h" />
+    <ClInclude Include="ItemTypes.h" />
     <ClInclude Include="LevelHandler.h" />
     <ClInclude Include="ObstacleTypes.h" />
     <ClInclude Include="Player.h" />
