--- a/testPro/testPro.vcxproj
+++ b/testPro/testPro.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerMovementHandler.cpp" />
     <ClCompile Include="RectangleObstacle.cpp" />
+    <ClCompile Include="StarCoin.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CircleObstacle.h" />
@@ -169,6 +170,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerMovementHandler.h" />
     <ClInclude Include="RectangleObstacle.h" />
+    <ClInclude Include="StarCoin.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
