--- a/testPro/testPro.vcxproj
+++ b/testPro/testPro.vcxproj
@@ -170,7 +170,11 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerMovementHandler.h" />
     <ClInclude Include="RectangleObstacle.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="StarCoin.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Block Crasher.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
