--- a/testPro/testPro.vcxproj
+++ b/testPro/testPro.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="LevelHandler.h" />
     <ClInclude Include="LevelStates.h" />
     <ClInclude Include="MenuHandler.h" />
+    <ClInclude Include="MenuState.h" />
     <ClInclude Include="ObstacleTypes.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerMovementHandler.h" />
